@@ -330,11 +330,175 @@ class BatchTest extends TestHelper {
   @Test
   void usingReservedVariableNames() {
     assertThatThrownBy(() -> database.command("sqlscript", """
-          FOREACH ($parent IN [1, 2, 3]){
-          RETURN;
-          }""")).isInstanceOf(CommandSQLParsingException.class);
+        FOREACH ($parent IN [1, 2, 3]){
+        RETURN;
+        }""")).isInstanceOf(CommandSQLParsingException.class);
 
     assertThatThrownBy(() -> database.command("sqlscript", "LET parent = 33;")).isInstanceOf(CommandSQLParsingException.class);
+  }
+
+  /**
+   * Issue https://github.com/ArcadeData/arcadedb/issues/1723
+   * Math operators should work with LET variables containing ResultSet
+   * When using $max + 1 where $max is a LET variable from a SELECT,
+   * the arithmetic should work on the scalar value, not return a Java object reference string.
+   */
+  @Test
+  void mathOperatorsWithResultSetVariable() {
+    database.command("sql", "CREATE VERTEX TYPE Invoice");
+
+    database.transaction(() -> {
+      // Insert some test data
+      database.command("sql", "INSERT INTO Invoice SET seqid = 10");
+      database.command("sql", "INSERT INTO Invoice SET seqid = 20");
+      database.command("sql", "INSERT INTO Invoice SET seqid = 30");
+
+      // First verify the max query works as expected
+      final ResultSet maxResult = database.query("sql", "SELECT max(seqid) as maxSeqId FROM Invoice");
+      assertThat(maxResult.hasNext()).isTrue();
+      final Result maxRow = maxResult.next();
+      assertThat(((Number) maxRow.getProperty("maxSeqId")).intValue()).isEqualTo(30);
+
+      // Test the workaround syntax first: $max[0].maxSeqId + 1
+      final ResultSet workaroundResult = database.command("sqlscript", """
+          LET $max = SELECT max(seqid) as maxSeqId FROM Invoice;
+          LET $maxValue = $max[0].maxSeqId;
+          RETURN $maxValue;
+          """);
+
+      assertThat(workaroundResult.hasNext()).isTrue();
+      final Result workaroundRow = workaroundResult.next();
+      final Object workaroundValue = workaroundRow.getProperty("value");
+      // Value should be 30, the max(seqid)
+      assertThat(workaroundValue).as("Workaround $max[0].maxSeqId should return 30").isNotNull();
+      assertThat(workaroundValue).isInstanceOf(Number.class);
+      assertThat(((Number) workaroundValue).intValue()).isEqualTo(30);
+
+      // Now test with arithmetic (simpler version without transaction)
+      final ResultSet result = database.command("sqlscript", """
+          LET $max = SELECT max(seqid) as maxSeqId FROM Invoice;
+          LET $nextId = $max[0].maxSeqId + 1;
+          RETURN $nextId;
+          """);
+
+      assertThat(result.hasNext()).isTrue();
+      final Result row = result.next();
+      // The nextId should be 31 (30 + 1)
+      final Object nextId = row.getProperty("value");
+      assertThat(nextId).as("$max[0].maxSeqId + 1 should return 31").isInstanceOf(Number.class);
+      assertThat(((Number) nextId).intValue()).isEqualTo(31);
+    });
+  }
+
+  /**
+   * Issue https://github.com/ArcadeData/arcadedb/issues/1723
+   * Direct arithmetic on ResultSet variable (without explicit field access)
+   * This tests the more convenient syntax that users expect to work.
+   * <p>
+   * When a ResultSet contains a single row with a single column (like SELECT max(...)),
+   * arithmetic operations should automatically extract the scalar value.
+   */
+  @Test
+  void mathOperatorsWithResultSetVariableDirect() {
+    database.command("sql", "CREATE VERTEX TYPE Counter");
+
+    database.transaction(() -> {
+      // Insert initial data
+      database.command("sql", "INSERT INTO Counter SET value = 100");
+
+      // Test: When ResultSet has single row with single value, arithmetic should extract it automatically
+      // This is the syntax users expect: $max + 1 where $max is SELECT max(value) FROM Counter
+      final ResultSet result = database.command("sqlscript", """
+          LET $max = SELECT max(value) FROM Counter;
+          LET $computed = $max + 1;
+          RETURN $computed;
+          """);
+
+      assertThat(result.hasNext()).isTrue();
+      final Result row = result.next();
+      final Object value = row.getProperty("value");
+
+      // When the bug exists, value is a String like "com.arcadedb.query.sql.executor.InternalResultSet@..."
+      // When fixed, value should be a Number (101)
+      assertThat(value).isNotNull();
+      assertThat(value).isInstanceOf(Number.class);
+      assertThat(((Number) value).intValue()).isEqualTo(101);
+    });
+  }
+
+  /**
+   * Issue https://github.com/ArcadeData/arcadedb/issues/1723
+   * Test the exact scenario from the issue report - creating vertex with auto-increment sequence.
+   */
+  @Test
+  void mathOperatorsWithResultSetVariableExactIssue() {
+    database.command("sql", "CREATE VERTEX TYPE Invoice");
+
+    // Insert data in a separate committed transaction so it's visible to BEGIN/COMMIT blocks
+    database.transaction(() -> {
+      database.command("sql", "INSERT INTO Invoice SET seqid = 5");
+      database.command("sql", "INSERT INTO Invoice SET seqid = 10");
+    });
+
+    database.transaction(() -> {
+      // Test without BEGIN/COMMIT first - this should work
+      final ResultSet computedResult = database.command("sqlscript", """
+          let $max = SELECT max(seqid) FROM Invoice;
+          let $nextId = $max + 1;
+          return $nextId;
+          """);
+
+      assertThat(computedResult.hasNext()).isTrue();
+      final Result computedRow = computedResult.next();
+      final Object computedValue = computedRow.getProperty("value");
+      assertThat(computedValue).as("$max + 1 in LET context should be 11").isInstanceOf(Number.class);
+      assertThat(((Number) computedValue).intValue()).isEqualTo(11);
+
+      // Test with BEGIN/COMMIT - data is now committed, so this should also work
+      final ResultSet result = database.command("sqlscript", """
+          begin;
+          let $max = SELECT max(seqid) FROM Invoice;
+          let $nextId = $max + 1;
+          let $invoice = CREATE VERTEX Invoice SET seqid = $nextId;
+          commit;
+          return $invoice;
+          """);
+
+      assertThat(result.hasNext()).isTrue();
+      final Result row = result.next();
+      final Object seqid = row.getProperty("seqid");
+
+      // The seqid should be 11 (10 + 1), not a string like "com.arcadedb.query.sql.executor.InternalResultSet@..."
+      assertThat(seqid).isNotNull();
+      assertThat(seqid).isInstanceOf(Number.class);
+      assertThat(((Number) seqid).intValue()).isEqualTo(11);
+    });
+  }
+
+  /**
+   * Issue https://github.com/ArcadeData/arcadedb/issues/2350
+   * SELECT FROM variable containing nested property access with RID string
+   */
+  @Test
+  void selectFromVariableWithNestedPropertyRidAccess() {
+    database.command("sql", "CREATE DOCUMENT TYPE TestSelectFromNestedRid");
+
+    database.transaction(() -> {
+      // Create a document and get its RID
+      final ResultSet insertResult = database.command("sql", "INSERT INTO TestSelectFromNestedRid SET name = " +
+          "'nested_test'");
+      assertThat(insertResult.hasNext()).isTrue();
+      final String ridString = insertResult.next().getIdentity().get().toString();
+
+      // Test: SELECT FROM a nested property containing a RID string
+      final ResultSet result = database.command("sqlscript", """
+          LET $batch_in = [{'source_id': '%s', 'target_id': '#4:0', 'features': {}, 'relation_type': 'in'}];
+          LET $source = (SELECT FROM $batch_in[0].source_id);
+          RETURN [$batch_in[0].source_id, $source];
+          """.formatted(ridString));
+
+      assertThat(result.hasNext()).isTrue();
+    });
   }
 
   /**
@@ -385,7 +549,7 @@ class BatchTest extends TestHelper {
         // Verify the result contains the expected document
         if (value instanceof java.util.List<?> list) {
           assertThat(list).isNotEmpty();
-          final Object firstItem = list.get(0);
+          final Object firstItem = list.getFirst();
           if (firstItem instanceof Result r) {
             assertThat((Object) r.getProperty("name")).isEqualTo("test");
           }
@@ -394,31 +558,6 @@ class BatchTest extends TestHelper {
         // The row itself is the document
         assertThat((Object) row.getProperty("name")).isEqualTo("test");
       }
-    });
-  }
-
-  /**
-   * Issue https://github.com/ArcadeData/arcadedb/issues/2350
-   * SELECT FROM variable containing nested property access with RID string
-   */
-  @Test
-  void selectFromVariableWithNestedPropertyRidAccess() {
-    database.command("sql", "CREATE DOCUMENT TYPE TestSelectFromNestedRid");
-
-    database.transaction(() -> {
-      // Create a document and get its RID
-      final ResultSet insertResult = database.command("sql", "INSERT INTO TestSelectFromNestedRid SET name = 'nested_test'");
-      assertThat(insertResult.hasNext()).isTrue();
-      final String ridString = insertResult.next().getIdentity().get().toString();
-
-      // Test: SELECT FROM a nested property containing a RID string
-      final ResultSet result = database.command("sqlscript", """
-          LET $batch_in = [{'source_id': '%s', 'target_id': '#4:0', 'features': {}, 'relation_type': 'in'}];
-          LET $source = (SELECT FROM $batch_in[0].source_id);
-          RETURN [$batch_in[0].source_id, $source];
-          """.formatted(ridString));
-
-      assertThat(result.hasNext()).isTrue();
     });
   }
 }
